@@ -5582,7 +5582,7 @@ by a
 Zappermask<br>
             </td>
           </tr>
-          <tr>
+          <tr><td><span style="font-style: italic;">GROUPKILLS</span></td><td>the player kills a certain number of mobs grouped in particular sizes</td></tr><tr>
             <td><em>STATVALUE</em></td>
             <td>player stat/numeric value goes above (or below) a
 specific value<br>
@@ -5595,7 +5595,7 @@ below) a
 specific value<br>
             </td>
           </tr>
-          <tr>
+          <tr><td><span style="font-style: italic;">FACTIONS</span></td><td>a list of player factions are above (or below) a specific value</td></tr><tr>
             <td><em>EXPLORE</em></td>
             <td>the player explores a specific percent of a
 particular
@@ -5613,121 +5613,121 @@ particular set of crafting skills<br>
 particular set of crafting skills<br>
             </td>
           </tr>
-          <tr>
-            <td>SKILLUSE</td>
+          <tr><td><span style="font-style: italic;">DECONSTRUCTING</span></td><td>a number of items are deconstructed with a particular crafting skill</td></tr><tr>
+            <td style="font-style: italic;">SKILLUSE</td>
             <td>a particular number of skills/spells of a
 particular
 name or type are used</td>
           </tr>
-          <tr>
-            <td>QUESTOR</td>
+          <tr><td><span style="font-style: italic;">SKILLPROF</span></td><td>a number of particular skills that reach a particular proficiency</td></tr><tr><td><span style="font-style: italic;">SOCIALUSE</span></td><td>a social is used a particular number of items</td></tr><tr>
+            <td style="font-style: italic;">QUESTOR</td>
             <td>a particular number of quests whose name match a
 mask
 are completed</td>
           </tr>
           <tr>
-            <td>ACHIEVER</td>
+            <td style="font-style: italic;">ACHIEVER</td>
             <td>a specific set of OTHER achievements are
 completed
 (these are checked periodically, please limit their number)</td>
           </tr>
           <tr>
-            <td>ROOMENTER</td>
+            <td style="font-style: italic;">ROOMENTER</td>
             <td>a specific room or set of rooms is entered by the
 player for the first time</td>
           </tr>
           <tr>
-            <td>LEVELSGAINED</td>
-            <td>a particular number of levels gained (or
-regained)
+            <td style="font-style: italic;">LEVELSGAINED</td>
+            <td>a particular number of levels gained, minus losses,
 &nbsp;to complete</td>
           </tr>
-          <tr>
-            <td>TIMEPLAYED</td>
+          <tr><td><span style="font-style: italic;">LEVELUP</span></td><td>a particular number of levels gained, regardless of lost levels, to complete</td></tr><tr><td style="font-style: italic;">CLASSLEVELSGAINED</td><td>a particular number of levels gained in a particular class, minus losses,
+&nbsp;to complete</td></tr><tr><td><span style="font-style: italic;">CLASSLEVELUP</span></td><td>a particular number of levels gained in a particular class, regardless of lost levels, to complete</td></tr><tr><td><span style="font-style: italic;">LEVELDOWN</span></td><td>a particular number of levels lost, regardless of regained levels, to complete</td></tr><tr><td><span style="font-style: italic;">CLASSLEVELDOWN</span></td><td>a particular number of levels lost in a particular class, regardless of regained levels, to complete</td></tr><tr>
+            <td style="font-style: italic;">TIMEPLAYED</td>
             <td>a particular number of seconds played</td>
           </tr>
           <tr>
-            <td>JUSTBE</td>
+            <td style="font-style: italic;">JUSTBE</td>
             <td>the player being in a particular state (these are
 checked periodically, please limit their number)</td>
           </tr>
           <tr>
-            <td>DEATHS</td>
+            <td style="font-style: italic;">DEATHS</td>
             <td>the player is killed a certain number of times by
 Zappermaked mobs</td>
           </tr>
           <tr>
-            <td>RETIRE</td>
+            <td style="font-style: italic;">RETIRE</td>
             <td>triggered whenever the player uses the RETIRE
 command</td>
           </tr>
           <tr>
-            <td>REMORT</td>
+            <td style="font-style: italic;">REMORT</td>
             <td>triggered whenever the player uses the REMORT
 command</td>
           </tr>
           <tr>
-            <td>GOTITEM</td>
+            <td style="font-style: italic;">GOTITEM</td>
             <td>triggered whenever the player gets a particular
 item</td>
           </tr>
           <tr>
-            <td>BIRTHS</td>
+            <td style="font-style: italic;">BIRTHS</td>
             <td>triggered when a player becomes a parent</td>
           </tr>
           <tr>
-            <td>RACEBIRTH</td>
+            <td style="font-style: italic;">RACEBIRTH</td>
             <td>triggered when a player becomes a parent of a
 newly
 generated mixed-race</td>
           </tr>
           <tr>
-            <td>PLAYERBORNPARENT</td>
+            <td style="font-style: italic;">PLAYERBORNPARENT</td>
             <td>triggered when a player becomes a parent of a mob
 that
 just became a new player</td>
           </tr>
           <tr>
-            <td>PLAYERBORN</td>
+            <td style="font-style: italic;">PLAYERBORN</td>
             <td>triggered when a player is born from the actions
 of
 another player</td>
           </tr>
           <tr>
-            <td>CHARACTERS</td>
+            <td style="font-style: italic;">CHARACTERS</td>
             <td>the number of characters in an account</td>
           </tr>
           <tr>
-            <td>CLANMEMBERS</td>
+            <td style="font-style: italic;">CLANMEMBERS</td>
             <td>the number of members of a clan</td>
           </tr>
           <tr>
-            <td>CLANKILLS</td>
+            <td style="font-style: italic;">CLANKILLS</td>
             <td>triggered when a clan member kills a rival clan
 member</td>
           </tr>
           <tr>
-            <td>CLANLEVELSGAINED</td>
+            <td style="font-style: italic;">CLANLEVELSGAINED</td>
             <td>a clan gaining a clan level</td>
           </tr>
           <tr>
-            <td>CLANDECLARE</td>
+            <td style="font-style: italic;">CLANDECLARE</td>
             <td>triggered when a clan declares a new relationship
 with another clan</td>
           </tr>
           <tr>
-            <td>CLANPROPERTY</td>
+            <td style="font-style: italic;">CLANPROPERTY</td>
             <td>the number of times the clan purchases private
 property</td>
           </tr>
           <tr>
-            <td>CONQUEREDAREAS</td>
+            <td style="font-style: italic;">CONQUEREDAREAS</td>
             <td>the number of areas the clan has conquered</td>
           </tr>
           <tr>
-            <td>CONQUESTPOINTS</td>
+            <td style="font-style: italic;">CONQUESTPOINTS</td>
             <td>the number of conquest points gained by the clan</td>
-          </tr>
+          </tr><tr><td><span style="font-style: italic;">AREAVISIT</span></td><td>the number of times an area is visited</td></tr><tr><td><span style="font-style: italic;">INSTANCEEXPIRE</span></td><td>the number of times an area instance expires</td></tr><tr><td><span style="font-style: italic;">SHIPSSUNK</span></td><td>the number of ships sunk by the player</td></tr><tr><td><span style="font-style: italic;">CHARITY</span></td><td>the amount of money given to particular beggers</td></tr><tr><td><span style="font-style: italic;">ENTITLED</span></td><td>gaining an amount of titles that match a mask</td></tr><tr><td><span style="font-style: italic;">SCRIPTED</span></td><td>number of times it was bumped with MPACHIEVE script command</td></tr>
         </tbody>
       </table>
       <br>
