@@ -54,7 +54,9 @@
 #     * amount of clan currency deposited in bank. Example: 10 \"clan gold coins\"
 #     * the word '1 tattoo' followed by ID and DESC arguments in parenthesis.  Tattoos of race/
 #       class ids prefixed by race_ or charclass_ can grant access.
-#       Example: 1 \"TATTOO(ID=RACE_ELF DESC-\\\"create an elf character\\\")\"
+#       Example: 1 \"TATTOO(ID=RACE_ELF DESC=\\\"create an elf character\\\")\"
+#     * an item from the global item catalog, example 1 \"ITEM(ID=\\\"a small mace\\\")\"
+#     * a mob follower from the global mob catalog, example 1 \"MOB(ID=\\\"a faithful hound\\\")\"
 # Note the spaces and use of quotes!
 # [DISPLAY] is a friendly display name of this achievement.
 # [DURATION] is the number of ticks before the achievement expires. 0=forever.
@@ -107,7 +109,7 @@
 #     the achievement is checked in order to gain.
 #     [NUM] is the numeric value of the number of factions that match the mask which
 #     must all be above or below the VALUE in order to gain.
-#     [A/B] is either the wordABOVE if each faction must be above the value, or 
+#     [A/B] is either the word ABOVE if each faction must be above the value, or 
 #     the word BELOW if each faction must be below the value.
 #
 # ... EVENT="EXPLORE" AREA="[AREA]" PERCENT=[PERCENT] ...
@@ -340,7 +342,7 @@
 #     [NUM] is the number of titles matching the mask
 #     [TITLEMASK] is an optional regular expression mask for titles
 #
-# ... EVENT="SCRIPTED" NUM=[NUMBER] TITLEMASK="[TITLEMASK]" ...
+# ... EVENT="SCRIPTED" NUM=[NUMBER] ...
 #     [NUM] is the number of times it was bumped with MPACHIEVE
 #
 # Some achievement events are updated every mud-hour (10 mins) automatically by 
